--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+android {
+    lintOptions {
+        abortOnError false
+    }
+}
